Wed Jul 12 13:27:00 BST 2000 Olly Betts

	* omega: allow multiple DB parameters and DB parameters listing
	  several databases (e.g. DB=one/two/three); merged logged
	  information into one file; added $dbname; general tidying

Tue Jul 11 18:17:00 BST 2000 Olly Betts

	* omega: implemented `exampl.' in query parser to mean an already
	  stemmed term.  Made `example.com' work as before too (same as
	  `example com')

Tue Jul 11 14:17:00 BST 2000 Olly Betts

	* omega: replaced LEX based query parser with YACC based parser
	  which handles phrases and boolean queries

	* omindex: lowercase tag names; added virtual destructor for
	  HtmlParser class; generate index terms from title	

Mon Jul 10 15:05:00 BST 2000 Olly Betts

	* omega: MORELIKE now works; godmode works to some extent; mset
	  moved into query.cc; empty query handling now less icky; $pages
	  replaced by macro language version; fixed bug which mishandled
	  $xxx{} and $xxx{,...}; added $lastpage, $thispage, $min, $max;
	  $if now takes optional 3rd argument (else clause); now use FMT
	  to choose template

Sun Jul 09 16:47:00 BST 2000 Olly Betts

	* omindex: fixed double slash at start of pathnames

	* omega: bodge for empty query; added %{...} for commenting out
	  code; turned on "selected" gif for current page of hits

Sun Jul 09 13:40:00 BST 2000 Olly Betts

	* omindex: added "&quot;" to entity list as stopgap measure; now put
	  http: urls in index instead of file:

	* omega: page, hit, and "god mode" extracted into template files;
	  $if* rationalised into just $if plus $ne, $eq, etc.; added $map;
	  text page links extracted into macro code; $topterms now produces
	  list can be turned into html with $map; added int_to_string() and
	  string_to_int()

Sat Jul 08 15:46:00 BST 2000 Olly Betts

	* omega: page links working (needs cleaning up still)

Sat Jul 08 14:40:00 BST 2000 Olly Betts

	* omega: matching terms now listed in query order
