@@ -48,9 +48,6 @@ extern om_queryop op;
 extern string raw_prob;
 extern OmQuery query;
 extern map<om_docid, bool> ticked;
-extern string query_string;
-extern map<char, string> filter_map;
-extern char *fmtstr;
 extern list<om_termname> new_terms_list;
 extern set<om_termname> new_terms;
 #endif /* QUERY_H */
