@@ -1,0 +1,8 @@
+#include <string>
+#include <vector>
+
+int string_to_int(const string &s);
+string int_to_string(int i);
+
+vector<string> split(const string &s, char at);
+vector<string> split(const string &s, const string &at);
