@@ -1,3 +1,10 @@
+Wed Jul 12 15:00:00 BST 2000 Olly Betts
+
+	* omega: added split() to split string into a vector; split out
+	  utils.{cc,h} to house split(), int_to_string(), and string_to_int;
+	  R CGI parameter can now list many document ids separated by `.';
+	  dead declarations pruned
+
 Wed Jul 12 13:27:00 BST 2000 Olly Betts
 
 	* omega: allow multiple DB parameters and DB parameters listing
